added header, footer + adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,23 +7,191 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="theme-color" content="#111111">
 	<title>Айболит - ветеринарная клиника | Главная страница</title>
-	<link rel="preload" href="fonts/FuturaNew-Bold.woff" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/FuturaNew-Bold.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/FuturaNew-Bold.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="fonts/FuturaNew-Regular.woff" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/FuturaNew-Regular.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/FuturaNew-Regular.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="fonts/SchoolBook-Regular.woff" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/SchoolBook-Regular.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/SchoolBook-Regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="stylesheet" href="css/vendor.min.css">
 	<link rel="stylesheet" href="css/index.min.css">
 	<script defer src="js/main.min.js"></script>
 </head>
 
-<body>
+<body class="page__body">
 	<div class="wrapper">
-		
+		<header class="header">
+	<div class="container">
+
+		<nav class="header__nav" title="">
+			<a class="logo" href="#">
+				<img class="logo__img" src="images/logo.svg" alt="Логотип Компании Айболит" width="100" height="100">
+			</a>
+
+			<ul class="menu">
+				<li class="menu__item"><a class="menu__link" href="#">Личный кабинет</a></li>
+				<li class="menu__item"><a class="menu__link" href="#">О нас</a></li>
+				<li class="menu__item"><a class="menu__link" href="#">Новости и акции</a></li>
+				<li class="menu__item"><a class="menu__link" href="#">Контакты</a></li>
+				<li class="menu__item"><a class="menu__link" href="#">Блог</a></li>
+			</ul>
+
+			<div class="menu__btns">
+
+				<div class="menu__box-btn modal-city">
+					<svg class="modal-city__icon">
+						<use xlink:href="images/sprite.svg#icon-map-mark"></use>
+					</svg>
+
+					<button class="menu__modal-city modal-city__btn" data-path="modal-city">Москва</button>
+				</div>
+
+				<button class="header__burger burger" type="button">
+					<span class="burger__line"></span>
+				</button>
+			</div>
+		</nav>
+
+	</div>
+</header>
 		<main class="main">
 
 		</main>
+		<footer class="footer">
+	<div class="container container--content-wide">
+		<div class="footer__top">
+			<a class="footer__logo logo" href="index.html">
+				<img class="logo__img" src="images/logo-white-circle.svg" width="325" height="90"
+					alt="Логотип компании Айболит">
+			</a>
+
+			<div class="footer__app-box app-box" target="_blank">
+				<a class="app-box__link" href="#">
+					<img class="app-box__img" src="images/apps-logo/app-store.svg" width="140" height="40" alt="Логотип Эпл стор">
+				</a>
+
+				<a class="app-box__link" href="#" target="_blank">
+					<img class="app-box__img" src="images/apps-logo/google-play.svg" width="140" height="40"
+						alt="Логотип Гугл плэй">
+				</a>
+			</div>
+		</div>
+
+		<div class="footer__bottom">
+			<div class="footer__box-links">
+
+				<a class="footer__politics" href="#">Политика конфедециальности в отношении обработки персональных данных</a>
+
+				<ul class="footer__item-list">
+					<li class="footer__item">
+						<a class="footer__link" href="index.html">Главная</a>
+					</li>
+
+					<li class="footer__item">
+						<a class="footer__link" href="#">Усгули и цены</a>
+					</li>
+
+					<li class="footer__item">
+						<a class="footer__link" href="#">История компании</a>
+					</li>
+
+					<li class="footer__item">
+						<a class="footer__link" href="#">Наши специалисты</a>
+					</li>
+
+					<li class="footer__item">
+						<a class="footer__link" href="#">Вакансии</a>
+					</li>
+
+					<li class="footer__item">
+						<a class="footer__link" href="#">Реквизиты</a>
+					</li>
+
+					<li class="footer__item">
+						<a class="footer__link" href="#">Онлайн-оплата</a>
+					</li>
+				</ul>
+
+				<ul class="footer__item-list">
+					<li class="footer__item">
+						<a class="footer__link" href="#">Отзывы</a>
+					</li>
+
+					<li class="footer__item">
+						<a class="footer__link" href="#">Контакты</a>
+					</li>
+
+					<li class="footer__item">
+						<a class="footer__link" href="#">Груминг-салон</a>
+					</li>
+
+					<li class="footer__item">
+						<a class="footer__link" href="#">Косметика</a>
+					</li>
+
+					<li class="footer__item">
+						<a class="footer__link" href="#">Новости и акции</a>
+					</li>
+
+					<li class="footer__item">
+						<a class="footer__link" href="#">Блог</a>
+					</li>
+				</ul>
+			</div>
+
+			<div class="footer__box-social">
+				<ul class="footer__social-list social-list">
+					<li class="social-list__item">
+						<a class="social__link" href="#" target="_blank">
+							<svg>
+								<use xlink:href="images/sprite.svg#icon-inst"></use>
+							</svg>
+						</a>
+					</li>
+
+					<li class="social-list__item">
+						<a class="social__link" href="#" target="_blank">
+							<svg>
+								<use xlink:href="images/sprite.svg#icon-fb"></use>
+							</svg>
+						</a>
+					</li>
+
+					<li class="social-list__item">
+						<a class="social__link" href="#" target="_blank">
+							<svg>
+								<use xlink:href="images/sprite.svg#icon-vk"></use>
+							</svg>
+						</a>
+					</li>
+
+					<li class="social-list__item">
+						<a class="social__link" href="#" target="_blank">
+							<svg>
+								<use xlink:href="images/sprite.svg#icon-youtube"></use>
+							</svg>
+						</a>
+					</li>
+				</ul>
+
+				<ul class="footer__contacts-list contacts-list">
+					<li class="contacts-list__item">
+						<a class="contacts-list__link" href="#" target="_blank">aibolit24.ru</a>
+					</li>
+
+					<li class="contacts-list__item">
+						<a class="contacts-list__link" href="#" target="_blank">aibolit24@gmail.com</a>
+					</li>
+
+					<li class="contacts-list__item">
+						<a class="contacts-list__link" href="#" type="tel:+74958884433">+7 495-888-44-33</a>
+					</li>
+				</ul>
+
+			</div>
+		</div>
+	</div>
+</footer>
 		
 	</div>
 </body>
