--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 @include('../modules/_head.html', {
 "title":"Айболит - ветеринарная клиника | Главная страница",
 "favicon":"favicon.ico",
@@ -7,13 +7,14 @@
 "css":"css/index.min.css"
 })
 
-<body>
+<body class="page__body">
 	<div class="wrapper">
 		@include('../modules/_header/_header.html')
 		<main class="main">
 
 		</main>
 		@include('../modules/_footer/_footer.html')
+		<!-- @include('../modules/_modal.html') -->
 	</div>
 </body>
 
