--- a/src/modules/_head.html
+++ b/src/modules/_head.html
@@ -5,11 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="theme-color" content="#111111">
 	<title>@title</title>
-	<link rel="preload" href="fonts/FuturaNew-Bold.woff" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/FuturaNew-Bold.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/FuturaNew-Bold.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="fonts/FuturaNew-Regular.woff" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/FuturaNew-Regular.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/FuturaNew-Regular.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="fonts/SchoolBook-Regular.woff" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/SchoolBook-Regular.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/SchoolBook-Regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="stylesheet" href="@cssvendor">
 	<link rel="stylesheet" href="@css">
