added main-slider block with adaptive

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,7 +11,7 @@
 	<div class="wrapper">
 		@include('../modules/_header/_header.html')
 		<main class="main">
-
+			@include('../modules/_main-slider/_main-slider.html')
 		</main>
 		@include('../modules/_footer/_footer.html')
 		<!-- @include('../modules/_modal.html') -->
