added why-choose block

--- a/app/index.html
+++ b/app/index.html
@@ -587,6 +587,115 @@
 		</div>
 	</div>
 </section>
+			<section class="why-choose">
+	<div class="container">
+		<h2 class="why-choose__title-top"><span>1 150 000</span>питомцам мы помогли
+			за 18 лет работы</h2>
+
+		<h3 class="why-choose__title title-block">Почему хозяева выбирают нас?</h3>
+		<ul class="why-choose-list">
+
+			<li class="why-choose-list__item">
+				<h4 class="why-choose-list__title">Работаем круглосуточно</h4>
+				<div class="why-choose-list__body">
+					<img class="why-choose-list__img" src="images/why-choose/24.svg" alt="Картинка 24/7">
+					<div class="why-choose-list__text">
+						<p>Мы готовы в любое время суток принять домашних питомцев и их хозяев</p>
+					</div>
+				</div>
+			</li>
+
+			<li class="why-choose-list__item">
+				<h4 class="why-choose-list__title">Широкий спектр услуг</h4>
+				<div class="why-choose-list__body">
+					<img class="why-choose-list__img" src="images/why-choose/animals.svg" alt="Картинка 24/7">
+					<div class="why-choose-list__text">
+						<p>Кроме широкопрофильных докторов в клинике развиты узкие направления в ветеринарии – офтальмология,
+							стоматология, дерматология, травматология, ортопедия и онкология</p>
+					</div>
+				</div>
+			</li>
+
+			<li class="why-choose-list__item">
+				<h4 class="why-choose-list__title">Большой опыт</h4>
+				<div class="why-choose-list__body">
+					<img class="why-choose-list__img" src="images/why-choose/hand.svg" alt="Картинка 24/7">
+					<div class="why-choose-list__text">
+						<p>30 высококвалифицированных врачей нашей клиники предоставляют ветеринарную помощь уже на протяжении 18
+							лет!</p>
+					</div>
+				</div>
+			</li>
+
+			<li class="why-choose-list__item">
+				<h4 class="why-choose-list__title">Собственная лаборатория</h4>
+				<div class="why-choose-list__body">
+					<img class="why-choose-list__img" src="images/why-choose/colb.svg" alt="Картинка 24/7">
+					<div class="why-choose-list__text">
+						<p>Оборудованная профессиональным оснащением производства компании IDEXX International Inc.(США), которое
+							позволяет получить результаты исследования прямо на приеме</p>
+					</div>
+				</div>
+			</li>
+
+			<li class="why-choose-list__item">
+				<h4 class="why-choose-list__title">Оснащенные стационары</h4>
+				<div class="why-choose-list__body">
+					<img class="why-choose-list__img" src="images/why-choose/house.svg" alt="Картинка 24/7">
+					<div class="why-choose-list__text">
+						<p>Обычный и инфекционный стационар с индивидуальным подогревом каждой клетки. Для питомцев в критическом
+							состоянии предусмотрены кислородные камеры</p>
+					</div>
+				</div>
+			</li>
+
+			<li class="why-choose-list__item">
+				<h4 class="why-choose-list__title">Новейшее оборудование</h4>
+				<div class="why-choose-list__body">
+					<img class="why-choose-list__img" src="images/why-choose/micro.svg" alt="Картинка 24/7">
+					<div class="why-choose-list__text">
+						<p>Помимо лабораторного оборудования и цифрового рентгена в клинике используется современный эндоскоп KARL
+							STORZ</p>
+					</div>
+				</div>
+			</li>
+
+			<li class="why-choose-list__item">
+				<h4 class="why-choose-list__title">Запись на прием онлайн</h4>
+				<div class="why-choose-list__body">
+					<img class="why-choose-list__img" src="images/why-choose/calendar.svg" alt="Картинка 24/7">
+					<div class="why-choose-list__text">
+						<p>Запись на приём позволяет избежать ожиданий в очереди, но если вы не можете приехать - мы выезжаем на
+							дом!</p>
+					</div>
+				</div>
+			</li>
+
+			<li class="why-choose-list__item">
+				<h4 class="why-choose-list__title">Аптека и зоомагазин</h4>
+				<div class="why-choose-list__body">
+					<img class="why-choose-list__img" src="images/why-choose/drugs.svg" alt="Картинка 24/7">
+					<div class="why-choose-list__text">
+						<p>Для удобства в клинике предусмотрен аптечный пункт, а также бутик с одеждой и косметическими средствами
+							для ухода за домашними любимцами</p>
+					</div>
+				</div>
+			</li>
+
+			<li class="why-choose-list__item">
+				<h4 class="why-choose-list__title">Груминг-салон</h4>
+				<div class="why-choose-list__body">
+					<img class="why-choose-list__img" src="images/why-choose/shape.svg" alt="Картинка 24/7">
+					<div class="why-choose-list__text">
+						<p>Отдельный кабинет для проведения гигиенческих и косметических процедур, таких как мытьё и сушка, стрижка
+							или тримминг, уход за ушами, глазами и когтями и многое другое</p>
+					</div>
+				</div>
+			</li>
+
+		</ul>
+	</div>
+</section>
 		</main>
 		<footer class="footer">
 	<div class="container container--content-wide">
