--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,6 +14,7 @@
 			@include('../modules/_main-slider/_main-slider.html')
 			@include('../modules/_services/_services.html')
 			@include('../modules/_about-block/_about-block.html')
+			@include('../modules/_why-choose/_why-choose.html')
 		</main>
 		@include('../modules/_footer/_footer.html')
 		<!-- @include('../modules/_modal.html') -->
