full first page

--- a/app/index.html
+++ b/app/index.html
@@ -596,7 +596,7 @@
 		<ul class="why-choose-list">
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Работаем круглосуточно</h4>
+				<h4 class="why-choose-list__title title-card ">Работаем круглосуточно</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/24.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -606,7 +606,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Широкий спектр услуг</h4>
+				<h4 class="why-choose-list__title title-card">Широкий спектр услуг</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/animals.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -617,7 +617,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Большой опыт</h4>
+				<h4 class="why-choose-list__title title-card">Большой опыт</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/hand.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -628,7 +628,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Собственная лаборатория</h4>
+				<h4 class="why-choose-list__title title-card">Собственная лаборатория</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/colb.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -639,7 +639,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Оснащенные стационары</h4>
+				<h4 class="why-choose-list__title title-card">Оснащенные стационары</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/house.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -650,7 +650,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Новейшее оборудование</h4>
+				<h4 class="why-choose-list__title title-card">Новейшее оборудование</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/micro.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -661,7 +661,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Запись на прием онлайн</h4>
+				<h4 class="why-choose-list__title title-card">Запись на прием онлайн</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/calendar.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -672,7 +672,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Аптека и зоомагазин</h4>
+				<h4 class="why-choose-list__title title-card">Аптека и зоомагазин</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/drugs.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -683,7 +683,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Груминг-салон</h4>
+				<h4 class="why-choose-list__title title-card">Груминг-салон</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/shape.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -696,6 +696,64 @@
 		</ul>
 	</div>
 </section>
+			<section class="app-block">
+	<div class="container container--content-narrow">
+		<div class="app-block__wrapper">
+			<div class="app-block__content">
+				<span class="app-block__soon">скоро</span>
+				<h2 class="app-block__title main-title">Удобное приложение
+					для питомцев <br> и
+					их хозяев</h2>
+				<div class="app-block__app app-box"></div>
+
+				<div class="app-block__app app-box">
+					<a class="app-box__link" href="#" target="_blank">
+						<img class="app-box__img" src="images/apps-logo/app-store.svg" width="140" height="40"
+							alt="Логотип Эпл стор">
+					</a>
+
+					<a class="app-box__link" href="#" target="_blank">
+						<img class="app-box__img" src="images/apps-logo/google-play.svg" width="140" height="40"
+							alt="Логотип Гугл плэй">
+					</a>
+				</div>
+			</div>
+
+			<img class="app-block__img" src="images/app-block/app.png" width='725' alt="Фото приложения">
+		</div>
+	</div>
+</section>
+			<section class="contacts-block">
+	<div class="container container--content-narrow">
+		<h3 class="contacts-block__title title-block">Контакты</h3>
+		<div class="contacts-block__wrapper">
+			<div class="contacts-block__box">
+
+				<div class="contacts">
+					<h4 class="contacts__title title-card">Айболит на Автозаводской</h4>
+					<ul class="contacts__list">
+						<li class="contacts__item contacts__item--adress">5-я Кожуховская улица, 8</li>
+						<li class="contacts__item contacts__item--tel"><a class="contacts__tel" href="tel:+74959996632">+7
+								495-999-66-32</a></li>
+						<li class="contacts__item contacts__item--time">Круглосуточно</li>
+					</ul>
+				</div>
+
+				<div class="contacts">
+					<h4 class="contacts__title title-card">Айболит на Кожуховской</h4>
+					<ul class="contacts__list">
+						<li class="contacts__item contacts__item--adress">улица Петра Романова, 9</li>
+						<li class="contacts__item contacts__item--tel"><a class="contacts__tel" href="tel:+74959998833">+7
+								495-999-88-33</a></li>
+						<li class="contacts__item contacts__item--time">Круглосуточно</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="map" id="map"></div>
+		</div>
+	</div>
+</section>
 		</main>
 		<footer class="footer">
 	<div class="container container--content-wide">
@@ -705,8 +763,8 @@
 					alt="Логотип компании Айболит">
 			</a>
 
-			<div class="footer__app-box app-box" target="_blank">
-				<a class="app-box__link" href="#">
+			<div class="footer__app-box app-box">
+				<a class="app-box__link" href="#" target="_blank">
 					<img class="app-box__img" src="images/apps-logo/app-store.svg" width="140" height="40" alt="Логотип Эпл стор">
 				</a>
 
@@ -834,6 +892,8 @@
 </footer>
 		
 	</div>
+
+	<script src="https://api-maps.yandex.ru/2.1/?apikey=e045d92b-4953-438d-a0e5-17ecdcfb7778&amp;lang=ru_RU"></script>
 </body>
 
 </html>
