--- a/app/page.html
+++ b/app/page.html
@@ -65,8 +65,8 @@
 					alt="Логотип компании Айболит">
 			</a>
 
-			<div class="footer__app-box app-box" target="_blank">
-				<a class="app-box__link" href="#">
+			<div class="footer__app-box app-box">
+				<a class="app-box__link" href="#" target="_blank">
 					<img class="app-box__img" src="images/apps-logo/app-store.svg" width="140" height="40" alt="Логотип Эпл стор">
 				</a>
 
