--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,10 +15,14 @@
 			@include('../modules/_services/_services.html')
 			@include('../modules/_about-block/_about-block.html')
 			@include('../modules/_why-choose/_why-choose.html')
+			@include('../modules/_app-block/_app-block.html')
+			@include('../modules/_contacts-block/_contacts-block.html')
 		</main>
 		@include('../modules/_footer/_footer.html')
 		<!-- @include('../modules/_modal.html') -->
 	</div>
+
+	<script src="https://api-maps.yandex.ru/2.1/?apikey=e045d92b-4953-438d-a0e5-17ecdcfb7778&amp;lang=ru_RU"></script>
 </body>
 
 </html>
