--- a/src/modules/_why-choose/_why-choose.html
+++ b/src/modules/_why-choose/_why-choose.html
@@ -7,7 +7,7 @@
 		<ul class="why-choose-list">
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Работаем круглосуточно</h4>
+				<h4 class="why-choose-list__title title-card ">Работаем круглосуточно</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/24.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -17,7 +17,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Широкий спектр услуг</h4>
+				<h4 class="why-choose-list__title title-card">Широкий спектр услуг</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/animals.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -28,7 +28,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Большой опыт</h4>
+				<h4 class="why-choose-list__title title-card">Большой опыт</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/hand.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -39,7 +39,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Собственная лаборатория</h4>
+				<h4 class="why-choose-list__title title-card">Собственная лаборатория</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/colb.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -50,7 +50,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Оснащенные стационары</h4>
+				<h4 class="why-choose-list__title title-card">Оснащенные стационары</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/house.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -61,7 +61,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Новейшее оборудование</h4>
+				<h4 class="why-choose-list__title title-card">Новейшее оборудование</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/micro.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -72,7 +72,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Запись на прием онлайн</h4>
+				<h4 class="why-choose-list__title title-card">Запись на прием онлайн</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/calendar.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -83,7 +83,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Аптека и зоомагазин</h4>
+				<h4 class="why-choose-list__title title-card">Аптека и зоомагазин</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/drugs.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
@@ -94,7 +94,7 @@
 			</li>
 
 			<li class="why-choose-list__item">
-				<h4 class="why-choose-list__title">Груминг-салон</h4>
+				<h4 class="why-choose-list__title title-card">Груминг-салон</h4>
 				<div class="why-choose-list__body">
 					<img class="why-choose-list__img" src="images/why-choose/shape.svg" alt="Картинка 24/7">
 					<div class="why-choose-list__text">
