--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,6 @@
 	<link rel="preload" href="fonts/FuturaNew-Regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/SchoolBook-Regular.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/SchoolBook-Regular.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="stylesheet" href="css/vendor.min.css">
 	<link rel="stylesheet" href="css/index.min.css">
 	<script defer src="js/main.min.js"></script>
 </head>
@@ -24,16 +23,15 @@
 	<div class="container">
 
 		<nav class="header__nav" title="">
-			<a class="logo" href="#">
+			<a class="logo" href="index.html">
 				<img class="logo__img" src="images/logo.svg" alt="Логотип Компании Айболит" width="100" height="100">
 			</a>
 
 			<ul class="menu">
-				<li class="menu__item"><a class="menu__link" href="#">Личный кабинет</a></li>
+				<li class="menu__item"><a class="menu__link" href="record-page.html">Запись на прием</a></li>
+				<li class="menu__item"><a class="menu__link" href="#">Выбор специалиста</a></li>
 				<li class="menu__item"><a class="menu__link" href="#">О нас</a></li>
-				<li class="menu__item"><a class="menu__link" href="#">Новости и акции</a></li>
 				<li class="menu__item"><a class="menu__link" href="#">Контакты</a></li>
-				<li class="menu__item"><a class="menu__link" href="#">Блог</a></li>
 			</ul>
 
 			<div class="menu__btns">
@@ -48,6 +46,8 @@
 
 				<button class="header__burger burger" type="button">
 					<span class="burger__line"></span>
+					<span class="sr-only">Открыть или закрыть меню</span>
+
 				</button>
 			</div>
 		</nav>
@@ -69,7 +69,7 @@
 							<div class="main-slider__wrapper-content">
 								<div class="main-slider__box-content">
 									<h2 class="main-slider__title main-title">Айболит круглосуточная ветклиника</h2>
-									<a class="main-slider__btn btn btn--brown" href="#">Записаться</a>
+									<a class="main-slider__btn btn btn--brown" href="record-page.html">Записаться</a>
 								</div>
 
 								<div class="main-slider__bottom">
@@ -122,7 +122,7 @@
 									<h2 class="main-slider__title main-title">Комфортные
 										оборудованные
 										стационары</h2>
-									<a class="main-slider__btn btn btn--brown" href="#">Записаться</a>
+									<a class="main-slider__btn btn btn--brown" href="record-page.html">Записаться</a>
 								</div>
 
 								<div class="main-slider__bottom">
@@ -174,7 +174,7 @@
 									<h2 class="main-slider__title main-slider__title--big main-title">Аптека и зоомагазин
 										по доступным
 										ценам</h2>
-									<a class="main-slider__btn btn btn--brown" href="#">Записаться</a>
+									<a class="main-slider__btn btn btn--brown" href="record-page.html">Записаться</a>
 								</div>
 
 								<div class="main-slider__bottom">
