--- a/src/modules/_header/_header-small.html
+++ b/src/modules/_header/_header-small.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header header--small">
 	<div class="container">
 
 		<nav class="header__nav" title="">
@@ -7,7 +7,7 @@
 			</a>
 
 			<ul class="menu">
-				<li class="menu__item"><a class="menu__link" href="record-page.html">Запись на прием</a></li>
+				<li class="menu__item"><a class="menu__link" href="record-block.html">Запись на прием</a></li>
 				<li class="menu__item"><a class="menu__link" href="#">Выбор специалиста</a></li>
 				<li class="menu__item"><a class="menu__link" href="#">О нас</a></li>
 				<li class="menu__item"><a class="menu__link" href="#">Контакты</a></li>
