--- a/src/modules/_main-slider/_main-slider.html
+++ b/src/modules/_main-slider/_main-slider.html
@@ -12,7 +12,7 @@
 							<div class="main-slider__wrapper-content">
 								<div class="main-slider__box-content">
 									<h2 class="main-slider__title main-title">Айболит круглосуточная ветклиника</h2>
-									<a class="main-slider__btn btn btn--brown" href="#">Записаться</a>
+									<a class="main-slider__btn btn btn--brown" href="record-page.html">Записаться</a>
 								</div>
 
 								<div class="main-slider__bottom">
@@ -65,7 +65,7 @@
 									<h2 class="main-slider__title main-title">Комфортные
 										оборудованные
 										стационары</h2>
-									<a class="main-slider__btn btn btn--brown" href="#">Записаться</a>
+									<a class="main-slider__btn btn btn--brown" href="record-page.html">Записаться</a>
 								</div>
 
 								<div class="main-slider__bottom">
@@ -117,7 +117,7 @@
 									<h2 class="main-slider__title main-slider__title--big main-title">Аптека и зоомагазин
 										по доступным
 										ценам</h2>
-									<a class="main-slider__btn btn btn--brown" href="#">Записаться</a>
+									<a class="main-slider__btn btn btn--brown" href="record-page.html">Записаться</a>
 								</div>
 
 								<div class="main-slider__bottom">
