--- a/app/record-page.html
+++ b/app/record-page.html
@@ -6,20 +6,20 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="theme-color" content="#111111">
-	<title>Главная страница</title>
+	<title>Айболит - ветеринарная клиника | запись на прием</title>
 	<link rel="preload" href="fonts/FuturaNew-Bold.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/FuturaNew-Bold.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/FuturaNew-Regular.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/FuturaNew-Regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/SchoolBook-Regular.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/SchoolBook-Regular.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="stylesheet" href="css/index.min.css">
+	<link rel="stylesheet" href="css/record-page.min.css">
 	<script defer src="js/main.min.js"></script>
 </head>
 
 <body class="page__body">
 	<div class="wrapper">
-		<header class="header">
+		<header class="header header--small">
 	<div class="container">
 
 		<nav class="header__nav" title="">
@@ -28,7 +28,7 @@
 			</a>
 
 			<ul class="menu">
-				<li class="menu__item"><a class="menu__link" href="record-page.html">Запись на прием</a></li>
+				<li class="menu__item"><a class="menu__link" href="record-block.html">Запись на прием</a></li>
 				<li class="menu__item"><a class="menu__link" href="#">Выбор специалиста</a></li>
 				<li class="menu__item"><a class="menu__link" href="#">О нас</a></li>
 				<li class="menu__item"><a class="menu__link" href="#">Контакты</a></li>
@@ -55,7 +55,33 @@
 	</div>
 </header>
 		<main class="main">
+			<section class="record-block">
+	<div class="container container--content-narrow">
+		<div class="record-block__wrapper">
+			<h1 class="record-block__title main-title">Запись на прием</h1>
 
+			<div class="record-block__box">
+
+				<a class="record-block__back link-back" href="index.html">
+					<svg>
+						<use xlink:href="images/sprite.svg#icon-arrow"></use>
+					</svg>
+					Назад
+				</a>
+
+				<a class="record-block__link" href="make-order.html">
+					<span class="record-block__descr">Онлайн-консультация</span>
+					<span class="record-block__price">2000 ₽</span>
+				</a>
+
+				<a class="record-block__link" href="make-order-free.html">
+					<span class="record-block__descr">Прием в клинике</span>
+					<span class="record-block__price">Бесплатно</span>
+				</a>
+			</div>
+		</div>
+	</div>
+</section>
 		</main>
 		<footer class="footer">
 	<div class="container container--content-wide">
@@ -192,7 +218,6 @@
 		</div>
 	</div>
 </footer>
-		
 	</div>
 </body>
 
