--- a/src/html/make-order.html
+++ b/src/html/make-order.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
 @include('../modules/_head.html', {
-"title":"Главная страница",
+"title":"Айболит - ветеринарная клиника | Оформление заказа",
 "favicon":"favicon.ico",
-"css":"css/index.min.css"
+"css":"css/make-order.min.css"
 })
 
 <body class="page__body">
 	<div class="wrapper">
-		@include('../modules/_header/_header.html')
+		@include('../modules/_header/_header-small.html')
 		<main class="main">
-
+			@include('../modules/_make-order/_make-order.html')
 		</main>
 		@include('../modules/_footer/_footer.html')
 		<!-- @include('../modules/_modal.html') -->
