--- a/src/html/record-page.html
+++ b/src/html/record-page.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
 @include('../modules/_head.html', {
-"title":"Главная страница",
+"title":"Айболит - ветеринарная клиника | запись на прием",
 "favicon":"favicon.ico",
-"css":"css/index.min.css"
+"css":"css/record-page.min.css"
 })
 
 <body class="page__body">
 	<div class="wrapper">
-		@include('../modules/_header/_header.html')
+		@include('../modules/_header/_header-small.html')
 		<main class="main">
-
+			@include('../modules/_record-block/_record-block.html')
 		</main>
 		@include('../modules/_footer/_footer.html')
-		<!-- @include('../modules/_modal.html') -->
 	</div>
 </body>
 
