--- a/app/make-order.html
+++ b/app/make-order.html
@@ -28,10 +28,10 @@
 			</a>
 
 			<ul class="menu">
-				<li class="menu__item"><a class="menu__link" href="record-block.html">Запись на прием</a></li>
+				<li class="menu__item"><a class="menu__link" href="record-page.html">Запись на прием</a></li>
 				<li class="menu__item"><a class="menu__link" href="#">Выбор специалиста</a></li>
-				<li class="menu__item"><a class="menu__link" href="#">О нас</a></li>
-				<li class="menu__item"><a class="menu__link" href="#">Контакты</a></li>
+				<li class="menu__item"><a class="menu__link" href="about-team.html">О нас</a></li>
+				<li class="menu__item"><a class="menu__link" href="contacts.html">Контакты</a></li>
 			</ul>
 
 			<div class="menu__btns">
@@ -74,7 +74,7 @@
 						required="required">
 
 					<div class="record-form__box">
-						<input class="record-form__input" type="tel" name="tel" id="tel" required>
+						<input class="record-form__input" type="tel" name="tel" id="tel" required placeholder="Ваш номер телефона">
 						<input class="record-form__input" type="text" name="date" placeholder="Желаемая дата и время приема"
 							required>
 					</div>
