--- a/app/page.html
+++ b/app/page.html
@@ -30,8 +30,8 @@
 			<ul class="menu">
 				<li class="menu__item"><a class="menu__link" href="record-page.html">Запись на прием</a></li>
 				<li class="menu__item"><a class="menu__link" href="#">Выбор специалиста</a></li>
-				<li class="menu__item"><a class="menu__link" href="#">О нас</a></li>
-				<li class="menu__item"><a class="menu__link" href="#">Контакты</a></li>
+				<li class="menu__item"><a class="menu__link" href="about-team.html">О нас</a></li>
+				<li class="menu__item"><a class="menu__link" href="contacts.html">Контакты</a></li>
 			</ul>
 
 			<div class="menu__btns">
