--- a/src/modules/_about-block/_about-block.html
+++ b/src/modules/_about-block/_about-block.html
@@ -8,7 +8,7 @@
 					<p>История компании начинается 14 января 1999 года, когда было образовано ООО «Чижи». Идея пришла, т.к. у
 						основателя компании Прозор Жанны Георгиевны была собака боксёр по кличке Бард…</p>
 				</div>
-				<a class="about-company__link link" href="#">Читать далее
+				<a class="about-company__link link" href="about-team.html">Читать далее
 					<svg>
 						<use xlink:href="images/sprite.svg#icon-arrow"></use>
 					</svg>
@@ -100,7 +100,7 @@
 					</div>
 				</div>
 
-				<a class="about-specialists__link link" href="#">Посмотреть всех
+				<a class="about-specialists__link link" href="about-team.html">Посмотреть всех
 					<svg>
 						<use xlink:href="images/sprite.svg#icon-arrow"></use>
 					</svg>
