--- a/src/modules/_make-order/_make-order.html
+++ b/src/modules/_make-order/_make-order.html
@@ -17,7 +17,7 @@
 						required="required">
 
 					<div class="record-form__box">
-						<input class="record-form__input" type="tel" name="tel" id="tel" required>
+						<input class="record-form__input" type="tel" name="tel" id="tel" required placeholder="Ваш номер телефона">
 						<input class="record-form__input" type="text" name="date" placeholder="Желаемая дата и время приема"
 							required>
 					</div>
