--- a/app/contacts.html
+++ b/app/contacts.html
@@ -6,14 +6,14 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="theme-color" content="#111111">
-	<title>Айболит - ветеринарная клиника | запись на прием</title>
+	<title>Главная страница</title>
 	<link rel="preload" href="fonts/FuturaNew-Bold.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/FuturaNew-Bold.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/FuturaNew-Regular.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/FuturaNew-Regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/SchoolBook-Regular.woff" as="font" type="font/woff" crossorigin>
 	<link rel="preload" href="fonts/SchoolBook-Regular.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="stylesheet" href="css/record-page.min.css">
+	<link rel="stylesheet" href="css/index.min.css">
 	<script defer src="js/main.min.js"></script>
 </head>
 
@@ -55,30 +55,34 @@
 	</div>
 </header>
 		<main class="main">
-			<section class="record-block">
+			<section class="contacts-block">
 	<div class="container container--content-narrow">
-		<div class="record-block__wrapper">
-			<h1 class="record-block__title main-title">Запись на прием</h1>
+		<h3 class="contacts-block__title title-block">Контакты</h3>
+		<div class="contacts-block__wrapper">
+			<div class="contacts-block__box">
 
-			<div class="record-block__box">
+				<div class="contacts">
+					<h4 class="contacts__title title-card">Айболит на Автозаводской</h4>
+					<ul class="contacts__list">
+						<li class="contacts__item contacts__item--adress">5-я Кожуховская улица, 8</li>
+						<li class="contacts__item contacts__item--tel"><a class="contacts__tel" href="tel:+74959996632">+7
+								495-999-66-32</a></li>
+						<li class="contacts__item contacts__item--time">Круглосуточно</li>
+					</ul>
+				</div>
 
-				<a class="record-block__back link-back" href="index.html">
-					<svg>
-						<use xlink:href="images/sprite.svg#icon-arrow"></use>
-					</svg>
-					Назад
-				</a>
-
-				<a class="record-block__link" href="make-order.html">
-					<span class="record-block__descr">Онлайн-консультация</span>
-					<span class="record-block__price">2000 ₽</span>
-				</a>
-
-				<a class="record-block__link" href="make-order-free.html">
-					<span class="record-block__descr">Прием в клинике</span>
-					<span class="record-block__price">Бесплатно</span>
-				</a>
+				<div class="contacts">
+					<h4 class="contacts__title title-card">Айболит на Кожуховской</h4>
+					<ul class="contacts__list">
+						<li class="contacts__item contacts__item--adress">улица Петра Романова, 9</li>
+						<li class="contacts__item contacts__item--tel"><a class="contacts__tel" href="tel:+74959998833">+7
+								495-999-88-33</a></li>
+						<li class="contacts__item contacts__item--time">Круглосуточно</li>
+					</ul>
+				</div>
 			</div>
+
+			<div class="map" id="map"></div>
 		</div>
 	</div>
 </section>
@@ -218,7 +222,9 @@
 		</div>
 	</div>
 </footer>
+		
 	</div>
+	<script src="https://api-maps.yandex.ru/2.1/?apikey=e045d92b-4953-438d-a0e5-17ecdcfb7778&amp;lang=ru_RU"></script>
 </body>
 
 </html>
