--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,8 @@
 			<ul class="menu">
 				<li class="menu__item"><a class="menu__link" href="record-page.html">Запись на прием</a></li>
 				<li class="menu__item"><a class="menu__link" href="#">Выбор специалиста</a></li>
-				<li class="menu__item"><a class="menu__link" href="#">О нас</a></li>
-				<li class="menu__item"><a class="menu__link" href="#">Контакты</a></li>
+				<li class="menu__item"><a class="menu__link" href="about-team.html">О нас</a></li>
+				<li class="menu__item"><a class="menu__link" href="contacts.html">Контакты</a></li>
 			</ul>
 
 			<div class="menu__btns">
@@ -486,7 +486,7 @@
 					<p>История компании начинается 14 января 1999 года, когда было образовано ООО «Чижи». Идея пришла, т.к. у
 						основателя компании Прозор Жанны Георгиевны была собака боксёр по кличке Бард…</p>
 				</div>
-				<a class="about-company__link link" href="#">Читать далее
+				<a class="about-company__link link" href="about-team.html">Читать далее
 					<svg>
 						<use xlink:href="images/sprite.svg#icon-arrow"></use>
 					</svg>
@@ -578,7 +578,7 @@
 					</div>
 				</div>
 
-				<a class="about-specialists__link link" href="#">Посмотреть всех
+				<a class="about-specialists__link link" href="about-team.html">Посмотреть всех
 					<svg>
 						<use xlink:href="images/sprite.svg#icon-arrow"></use>
 					</svg>
